<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabGravity="fill"
            app:tabMinWidth="90dp"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSynced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_synced" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_failed" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabIgnored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_ignored" />

        </com.google.android.material.tabs.TabLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!--
    <include
        layout="@layout/fragment_sync_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="?attr/colorAccent"
        app:srcCompat="@drawable/ic_fab_sync" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>